k8s/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wordpress-deployment
  namespace: wordpress

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wordpress

  template:
    metadata:
      labels:
        app: wordpress

    spec:
      containers:
        - name: wordpress
          image: wordpress:6.8.2-apache

          ports:
            - containerPort: 80
