k8s/wordpress-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: wordpress-service
  namespace: wordpress

spec:
  selector:
    app: wordpress

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
